--- a/styles.css
+++ b/styles.css
@@ -19,4 +19,12 @@ h1 {
    padding: 8px;
    text-shadow: 5px 5px 6px gray;
 }
-
+p {
+   color: white;
+   font-size: 16px;
+   padding: 10px;
+   background: linear-gradient(to bottom right, darkblue, skyblue);
+   box-shadow: 5px 5px 6px gray;
+   border-radius: 5px;
+   width: 350px;
+}
